# CppInterOp

./: CMakeLists.txt
include/clang/: CMakeLists.txt
include/clang-c/: CMakeLists.txt  CXCppInterOp.h
include/clang/Interpreter/: CMakeLists.txt  Compatibility.h  CppInterOpInterpreter.h
lib/Interpreter/: CMakeLists.txt  CXCppInterOp.cpp  CppInterOp.cpp
lib/Interpreter/c/: CXCppInterOp.cpp
unittests/CppInterOp/: CMakeLists.txt  FunctionReflectionTest.cpp  InterpreterTest.cpp  ScopeReflectionTest.cpp  TypeReflectionTest.cpp
